--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-/* You can adjust the colors and heights as needed */
 .short-line {
-  background-color: #5546ff; /* secondary color */
+  background-color: #5546ff;
   height: 4px;
   width: 60px;
   margin: 0 auto;
 }
 
 .long-line {
-  background-color: #5546ff; /* secondary color */
+  background-color: #5546ff;
   height: 4px;
   width: 120px;
   margin: 0 auto;
@@ -23,4 +22,20 @@ html {
 
 section {
   min-height: 100vh;
+}
+
+.title {
+  font-family: "Roboto", sans-serif;
+}
+
+.name-project {
+  font-family: "Open Sans", sans-serif;
+}
+
+.description-project {
+  font-family: "Montserrat", sans-serif;
+}
+
+.button-navigation {
+  font-family: "Roboto", sans-serif;
 }
